2006-04-28  Alexander Malysh <amalysh at kannel.org>
  * gwlib/list.h: added example to the comment how to use gwlist_sort function.
    Thanks to Wilfried Goesgens <w.goesgens at chaosindustries.de> for patch.

2006-04-28  Alexander Malysh <amalysh at kannel.org>
  * gw/smsbox.c: fixed memory leak.
    Thanks to Rafael <rafael at atgcaribbean.com> for patch.
    [Msg-Id: <44510365.8070000@atgcaribbean.com>]

2006-04-24 Andreas Fink <andreas@fink.org>
  * gw/smsc/smsc_at.c, gw/msg.h, gw/smsbox.c, gw/urltrans.c
    added new parameter %f to show the SMSC number from which an incoming sms
    is arriving. Only valid for AT.

2006-04-19  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_http.c: We need to refresh the connect time when status
    is changing to SMSCCONN_ACTIVE otherwise connect time has no sense.
    Thanks to Vincent Chavanis <vincent at telemaque.fr> for provided patch.
    [Msg-Id: <0eda01c66398$5bc7fe10$9600a8c0@vince>]

2006-04-07  Alexander Malysh <amalysh at kannel.org>
  * gw/smscconn.c: fix for prev. patch that throughput was not set.
    Thanks to Vincent Chavanis <vincent at telemaque.fr> for pointing to this.

2006-04-07  Alexander Malysh <amalysh at kannel.org>
  * gw/smscconn.c, gw/smscconn_p.h, gw/smsc/smsc_emi.c, gw/smsc/smsc_fake.c,
    gw/smsc/smsc_http.c, gw/smsc/smsc_smasi.c, gw/smsc/smsc_smpp.c: applied patch
    that changes throughput from integer to double for more precise throughput
    configuration.
    Thanks to Vincent Chavanis <vincent at telemaque.fr> for provided patch.
    [Msg-Id: <1e2901c659a5$09339850$9600a8c0@vince>]

2006-04-07  Alexander Malysh <amalysh at kannel.org>
  * gw/ota_prov.c: fixed memory leaks.
    Thanks to Rene Kluwen <rene.kluwen at chimit.nl> for provided patch.
    [Msg-Id: <AFEHKJODIBGCKGHIDIPHCEELCBAA.rene.kluwen@chimit.nl>]

2006-04-01  Alexander Malysh <amalysh at kannel.org>
  * gw/bb_smscconn.c, gw/smsbox.c, gw/smscconn.c, gw/urltrans.c,